# fastapi-celery

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  worker.py
app/core/: settings.py
app/static/: main.js
app/templates/: _base.html  footer.html  home.html
docker/python/: .dockerignore  Dockerfile
