[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["Lucas Borio <lborio@perceptyx.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"
redis = "^4.3.4"
flower = "^1.2.0"
Jinja2 = "^3.1.2"
requests = "^2.28.1"
celery = {extras = ["redis"], version = "^5.2.7"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
